[package]
name = "todos"
version = "0.1.0"
authors = ["advaiyalad <advaiya.lad@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "=1.0.126", features = ["derive"] }
actix-web = "=3.3.2"
diesel = { version = "=1.4.6", features = ["postgres", "r2d2"] }
dotenv = "=0.15.0"
serde_json = "=1.0.64"
argon2 = "=0.2.0"
jsonwebtoken = "=7.2.0"
chrono = "=0.4.19"
rand_core = { version = "=0.6.2", features = ["std"] }
futures = "~0.3"
